# learning-bevy

./: .gitignore  Cargo.toml  README.md  learning-bevy.d.ts  learning-bevy.js  learning-bevy_bg.wasm.d.ts
.github/workflows/: deployment.yaml
assets/: game.ldtk  game.yaml
assets/anims/: player.animation.yaml
assets/sprites/character/: charspo-energyshield.aseprite  charspo-greatsword.aseprite  charspo-scythe.aseprite  palette.aseprite  scenespo-clearing.aseprite  sierra-human.aseprite  sierra.aseprite
examples/: README.md
examples/hello-world/src/: main.rs
examples/sensor-collider/: Cargo.toml
examples/sensor-collider/assets/: game.ldtk
examples/sensor-collider/src/: main.rs
public/: index.html
src/: animation.rs  followcamera.rs  gamestate.rs  input.rs  level.rs  locomotion.rs  main.rs  metadata.rs  physics.rs  player.rs  states.rs
